manifests/base/load-balancer-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
spec:
  selector:
    app: hello-node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
