manifests/base/ingress-routing.yaml
# ingress-domain-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain-based-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-galvanizer"
spec:
  tls:
    - hosts:
        - app1.galvanizer.app
        - app2.galvanizer.app
      secretName: galvanizer-tls
  rules:
    - host: app1.galvanizer.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hello-node-app-service
                port:
                  number: 80
    - host: app2.galvanizer.app
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: text-next-app-service
                port:
                  number: 80
